// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs component does not render with no crumbs 1`] = `""`;

exports[`Breadcrumbs component renders crumbs with links 1`] = `
<ul
  className="breadcrumbs"
>
  <li
    className="breadcrumb"
  >
    <[object Object]
      to="/"
    >
      Home
    </[object Object]>
  </li>
  <li
    className="breadcrumb"
    key="crumb-Crumb"
  >
    <[object Object]
      to="/crumb"
    >
      Crumb
    </[object Object]>
  </li>
</ul>
`;

exports[`Breadcrumbs component renders crumbs without links 1`] = `
<ul
  className="breadcrumbs"
>
  <li
    className="breadcrumb"
  >
    <[object Object]
      to="/"
    >
      Home
    </[object Object]>
  </li>
  <li
    className="breadcrumb"
    key="crumb-Crumb"
  >
    Crumb
  </li>
</ul>
`;
